minor fix text align

--- a/src/components/Residents.css
+++ b/src/components/Residents.css
@@ -14,5 +14,6 @@
     display: grid;
     justify-items: left;
     justify-content: left;
+    text-align: left;
     min-width: fit-content;
 }
